--- a/measurement/views/inh_sale_order.xml
+++ b/measurement/views/inh_sale_order.xml
@@ -34,6 +34,11 @@
                     </group>
                 </group>
             </xpath>
+
+            <xpath expr="//field[@name='order_line']/list" position="inside">
+                <field name="part_of_id"/>
+            </xpath>
+
             <xpath expr="//sheet/notebook" position="inside">
                 <page string="Products">
                     <label for="basic_prod" string="Basic"/>
@@ -57,6 +62,11 @@
                                 <field name="product_type"/>
                                 <field name="m3_h"/>
                                 <field name="prod_capacity" widget="percent"/>
+                                <button name="action_add_to_order_line"
+                                string="Add"
+                                type="object"
+                                class="btn-primary"
+                                icon="fa-plus"/>
                             </list>
                         </field>
                     </group>
