[IMPROVED] - Flow things are improved

--- a/measurement/reports/report_heat_recovery.xml
+++ b/measurement/reports/report_heat_recovery.xml
@@ -358,13 +358,13 @@
                                 <tr style="text-align:center; font-weight:400; background:#fafafa;">
                                     <td style="border:1px solid #000; padding:6px; text-align:left;">Sub Total</td>
                                     <td style="border:1px solid #000; padding:6px;">
-                                        £ <t t-esc="doc.basic_prod.lst_price"/>
+                                        £ <t t-esc="doc.basic_prod.lst_price + doc.line_price_of_kit"/>
                                     </td>
                                     <td style="border:1px solid #000; padding:6px;">
-                                        £ <t t-esc="doc.upgraded_prod.lst_price"/>
+                                        £ <t t-esc="doc.upgraded_prod.lst_price + doc.line_price_of_kit"/>
                                     </td>
                                     <td style="border:1px solid #000; padding:6px;">
-                                        £ <t t-esc="doc.premium_prod.lst_price"/>
+                                        £ <t t-esc="doc.premium_prod.lst_price + doc.line_price_of_kit"/>
                                     </td>
                                 </tr>
 
@@ -418,11 +418,11 @@
                                 </tr>
                                 <tr style="text-align:center; font-weight:400;">
                                     <t t-set="basic_vat"
-                                       t-value="doc.basic_prod.lst_price + delivery_line.price_subtotal"/>
+                                       t-value="doc.basic_prod.lst_price + delivery_line.price_subtotal + doc.line_price_of_kit"/>
                                     <t t-set="upgrade_vat"
-                                       t-value="doc.upgraded_prod.lst_price + delivery_line.price_subtotal"/>
+                                       t-value="doc.upgraded_prod.lst_price + delivery_line.price_subtotal + doc.line_price_of_kit"/>
                                     <t t-set="premium_vat"
-                                       t-value="doc.premium_prod.lst_price + delivery_line.price_subtotal"/>
+                                       t-value="doc.premium_prod.lst_price + delivery_line.price_subtotal + doc.line_price_of_kit"/>
                                     <td style="border:1px solid #000; padding:6px; text-align:left;">Total Exc VAT</td>
                                     <td style="border:1px solid #000; padding:6px;">
                                         £ <t t-esc="basic_vat"/>
@@ -444,7 +444,7 @@
                                         <t t-set="shipping_price"
                                            t-value="shipping_line.price_total if shipping_line else 0.0"/>
                                         <t t-set="basic_total"
-                                           t-value="doc.basic_prod.lst_price * (1 + (doc.basic_prod.taxes_id and doc.basic_prod.taxes_id[0].amount or 0.0) / 100.0) + shipping_price"/>
+                                           t-value="(doc.basic_prod.lst_price + doc.line_price_of_kit) * (1 + (doc.basic_prod.taxes_id and doc.basic_prod.taxes_id[0].amount or 0.0) / 100.0) + shipping_price"/>
                                         <t t-esc="'£ {:.2f}'.format(basic_total)"/>
                                     </td>
 
@@ -455,7 +455,7 @@
                                         <t t-set="shipping_price"
                                            t-value="shipping_line.price_total if shipping_line else 0.0"/>
                                         <t t-set="upgrade_total"
-                                           t-value="doc.upgraded_prod.lst_price * (1 + (doc.upgraded_prod.taxes_id and doc.upgraded_prod.taxes_id[0].amount or 0.0) / 100.0) + shipping_price"/>
+                                           t-value="(doc.upgraded_prod.lst_price+ doc.line_price_of_kit) * (1 + (doc.upgraded_prod.taxes_id and doc.upgraded_prod.taxes_id[0].amount or 0.0) / 100.0) + shipping_price"/>
                                         <t t-esc="'£ {:.2f}'.format(upgrade_total)"/>
                                     </td>
 
@@ -466,7 +466,7 @@
                                         <t t-set="shipping_price"
                                            t-value="shipping_line.price_total if shipping_line else 0.0"/>
                                         <t t-set="premium_total"
-                                           t-value="doc.premium_prod.lst_price * (1 + (doc.premium_prod.taxes_id and doc.premium_prod.taxes_id[0].amount or 0.0) / 100.0) + shipping_price"/>
+                                           t-value="(doc.premium_prod.lst_price + doc.line_price_of_kit) * (1 + (doc.premium_prod.taxes_id and doc.premium_prod.taxes_id[0].amount or 0.0) / 100.0) + shipping_price"/>
                                         <t t-esc="'£ {:.2f}'.format(premium_total)"/>
                                     </td>
                                 </tr>
