[ADDED] - Added the flow for manifolds points and gettig the product and its config

--- a/measurement/views/inh_sale_order.xml
+++ b/measurement/views/inh_sale_order.xml
@@ -31,6 +31,8 @@
                         <field name="correct_rate" readonly="1"/>
                         <field name="req_cont_trickle" force_save="1" readonly="1" invisible="1"/>
                         <field name="m3_h" force_save="1" readonly="1"/>
+                        <field name="no_of_manifolds" invisible="1"/>
+                        <field name="no_of_points" invisible="1"/>
                     </group>
                 </group>
             </xpath>
