[IMPROVED] - Improved the code for the following files.

--- a/measurement/views/inh_prod_temp_view.xml
+++ b/measurement/views/inh_prod_temp_view.xml
@@ -6,6 +6,7 @@
         <field name="arch" type="xml">
             <xpath expr="//page[@name='general_information']" position="inside">
                 <group string="Custom Fields">
+                    <field name="main_kit_product"/>
                     <field name="product_diameter"/>
                     <field name="product_type"/>
                     <field name="m3_h"/>
