[ADDED] - Added postal code in delivery method.

--- a/delivery_state_pricing/views/choose_delivery_carrier.xml
+++ b/delivery_state_pricing/views/choose_delivery_carrier.xml
@@ -5,6 +5,7 @@
         <field name="inherit_id" ref="delivery.choose_delivery_carrier_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='carrier_id']" position="after">
+                <field name="zip_code"/>
                 <field name="state_id"/>
             </xpath>
         </field>
