--- a/delivery_state_pricing/views/delivery_price_rule_views.xml
+++ b/delivery_state_pricing/views/delivery_price_rule_views.xml
@@ -15,6 +15,7 @@
             <xpath expr="//form/group[2]" position="after">
                 <group>
                     <field name="state_id" string="State"/>
+                    <field name="zip_code" string="Postal Code"/>
                     <field name="list_base_price" widget="monetary" string="Delivery Price" />
                 </group>
             </xpath>
