[ADDED] Added new changes.

--- a/delivery_state_pricing/views/choose_delivery_carrier.xml
+++ b/delivery_state_pricing/views/choose_delivery_carrier.xml
@@ -7,6 +7,7 @@
             <xpath expr="//field[@name='carrier_id']" position="after">
                 <field name="zip_code"/>
                 <field name="state_id"/>
+                <field name="postal_id"/>
             </xpath>
         </field>
     </record>
