--- a/measurement/views/inh_sale_order.xml
+++ b/measurement/views/inh_sale_order.xml
@@ -20,10 +20,10 @@
                         <field name="place_type"/>
                         <field name="dwelling_total_area"/>
                         <field name="selective_diameter"/>
-                        <field name="floor_name_ids" widget="many2many_tags"/>
+                        <field name="floor_name_ids" widget="many2many_tags" string="Dwell Type"/>
                         <field name="supply_install"/>
-                        <field name="supply_kit"/>
-                        <field name="supply_kit_install"/>
+<!--                        <field name="supply_kit"/>-->
+<!--                        <field name="supply_kit_install"/>-->
 
                     </group>
                     <group>
@@ -43,7 +43,7 @@
                 <field name="part_of_id"/>
             </xpath>
 
-            <xpath expr="//sheet/notebook" position="inside">
+            <xpath expr="//page[@name='order_lines']" position="before">
                 <page string="Extract">
                     <field name="commission_table_ids">
                         <list editable="bottom">
@@ -109,6 +109,9 @@
                         </field>
                     </group>
                 </page>
+            </xpath>
+            <xpath expr="//page[@name='order_lines']" position="attributes">
+                <attribute name="string">Kit Material</attribute>
             </xpath>
         </field>
     </record>
